# kokoro-tts

./: .gitignore  pyproject.toml  tts.py
tests/: test_tts.py
