[project]
name = "kokoro-tts"
version = "0.1.0"
description = "Local TTS CLI using kokoro-onnx with system audio playback"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx>=0.5.0",
    "numpy",
]

[project.scripts]
tts = "tts:main"

[tool.hatch.build.targets.wheel]
include = ["tts.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
